implemented exam 2-month tasks
