# code/2-exam/api/models/order.go
@@ -78,3 +78,12 @@ type CreateOrderItem struct {
 	Discount    float64  `json:"discount"`
 	Cell_price  float64  `json:"cell_price"`
 }
+
+type OrderTotalPrice struct {
+	Name            string  `json:"name"`
+	Discount        float64 `json:"discount"`
+	DiscountType    string  `json:"discount_type"`
+	OrderLimitPrice float64 `json:"order_limit_price"`
+	OrderId       int    `json:"order_id"`
+	PromoCodeName string `json:"promo_code"`
+}
